ingress/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
#    traefik.ingress.kubernetes.io/router.entrypoints: websecure
#    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
#  ingressClassName: traefik
#  tls:
#    - hosts:
#        - api.vieface.io.vn
  rules:
#    - host: api.vieface.io.vn
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000
          - path: /app_socket
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 3000
